# RDPRO-SS26-Project

./: .env.example  .gitignore  CLAUDE.md  CONTRIBUTIONS.md  EXPERIMENTAL_RESULTS.md  EXPERIMENTS.md  LICENSE  README.md  build_integration_update_notebook.py  build_vision_benchmarks_notebook.py  cost_meter.py  dataset_analyzer.py  dog_breed_workflow.py  ensemble.py  env_loader.py  feature_processor.py  features_extraction_api.py  image_processor.py  integration_update_colab.ipynb  jiaozi_fullchain.ipynb  jiaozi_kaggle_competition.ipynb  kaggle_benchmark_colab.ipynb  kaggle_orchestrator.py  kaggle_submit.py  main.py  mlestar_kaggle_experiments.ipynb  outcomes.jsonl  pipeline.py  prompt.txt  pyproject.toml  report.md  requirements.txt  run_and_log.py  run_for_testing.py  run_kaggle_benchmark.py  run_soup_experiment.py  skrub_pipeline.py  soup.py  soup_experiment_colab.ipynb  test_kaggle_orchestrator.py  (+5 more)
agents/: __init__.py  knowledge_learner_agent.py  mcp_client.py  mle_experiment_agent.py
analyzer/: image_metadata.py  image_statistics.py  test_image_statistics.py
autopipeline/: __init__.py  candidate_selector.py  fold_ensemble.py
benchmarks/: __init__.py  catalog.py  contracts.py
configs/: pipeline.yaml
cv_autodl_agent/: __init__.py  __main__.py  ablation.py  codegen.py  exceptions.py  executor.py  io_utils.py  notebook.py  planner.py  review.py  schemas.py  selectors.py  templates.py  workflow.py
docs/: AGENT_LEARNING_GUIDE.md  BENCHMARK_STATUS.md  COLAB.md  COLAB_MLESTAR.md  CV_AUTODL_TECHNICAL_DOC.md  EVALUATION_PROTOCOL.md  HANDOFF.md  MCP_KNOWLEDGE_AGENT.md  MLESTAR_DATAOPS.md  MODULE3_API.md  ab_loss_imbalance_protocol.md  ab_loss_imbalance_summary.md  features_extraction_api.md  kb_mining_protocol.md  module3_4_technical_cn.md  module3_4_technical_en.md  module3_improvements.md  next_steps.md  project_report_cn.md  project_report_en.md  recipe_design.md  recommender.md  usage_guide.md
etl/: skrub_processor.py
examples/: cifar10_candidates.json  cifar10_manifest.json  classification_candidates.json  classification_manifest.json  colab_demo.ipynb  detection_candidates.json  detection_manifest.json  expected_classification_summary.json  food101_candidates.json  food101_manifest.json  segmentation_candidates.json  segmentation_manifest.json
experiments/: __init__.py
experiments/mlestar_kaggle_benchmarks/: .gitignore  README.md  pyproject.toml
experiments/mlestar_kaggle_benchmarks/benchmarks/: __init__.py  catalog.py
experiments/mlestar_kaggle_benchmarks/docs/: BENCHMARK_STATUS.md  COLAB.md  EVALUATION_PROTOCOL.md
experiments/mlestar_kaggle_benchmarks/examples/synthetic_dog_breed/: labels.csv  sample_submission.csv
experiments/mlestar_kaggle_benchmarks/examples/synthetic_histopathologic_cancer/: train_labels.csv
experiments/mlestar_kaggle_benchmarks/examples/synthetic_histopathologic_cancer/train/: h0.tif  h1.tif  h3.tif  h4.tif
experiments/mlestar_kaggle_benchmarks/mlestar/: __init__.py  artifacts.py  cli.py  contracts.py  dataops.py  ensemble.py  initialization.py  metrics.py
experiments/mlestar_kaggle_benchmarks/mlestar/adapters/: __init__.py  tabular.py  vision.py
experiments/mlestar_kaggle_benchmarks/notebooks/: jiaozi_kaggle_competition.ipynb  mlestar_kaggle_experiments.ipynb
experiments/mlestar_kaggle_benchmarks/scripts/: run_smoke_experiment.py
experiments/mlestar_kaggle_benchmarks/tests/: test_contracts.py  test_dataops.py  test_executor.py  test_initialization.py  test_metrics.py  test_notebook.py  test_search.py  test_smoke_script.py  test_standalone_layout.py  test_tabular_adapter.py  test_vision_adapter.py
features/: __init__.py  (+2 more)
(+239 files in other folders)
