[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cv-autodl-agent"
version = "0.1.0"
description = "Workflow-first CV Auto-DL code generation and ablation submodule."
readme = "README.md"
requires-python = ">=3.11"
authors = [
  { name = "Jiaozi Project Team" }
]
dependencies = [
  "numpy",
  "pandas",
  "scikit-learn",
  "skrub>=0.9,<0.10",
]

[project.optional-dependencies]
llm = [
  "openai>=2.0.0",
]
competition = [
  "kaggle>=2.2.2",
  "pillow",
  "timm",
  "torch",
]
dev = [
  "pytest",
]

[project.scripts]
jiaozi-mlestar = "mlestar.__main__:main"

[tool.setuptools.packages.find]
include = ["cv_autodl_agent*", "mlestar*", "benchmarks*"]
