[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "mlestar-dataops"
version = "0.2.0"
description = "Standalone MLE-STAR reproduction with skrub DataOps"
readme = "README.md"
requires-python = ">=3.11"
license = {file = "LICENSE"}
dependencies = [
  "numpy>=1.26",
  "pandas>=2.1",
  "scikit-learn>=1.4",
  "skrub>=0.9,<0.10",
]

[project.optional-dependencies]
vision = ["torch", "torchvision", "timm", "pillow"]
llm = ["openai>=2.0.0"]
kaggle = ["kaggle>=2.0.0"]
dev = ["pytest>=8"]

[project.scripts]
mlestar = "mlestar.cli:main"

[tool.setuptools.packages.find]
include = ["mlestar*", "benchmarks*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
