[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "jiaozi"
version = "0.1.0"
description = "GraphRAG-based computer-vision AutoML pipeline and reproducible experiments."
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
license-files = ["LICENSE"]
authors = [
  { name = "Jiaozi Project Team" }
]
dependencies = [
  "chromadb",
  "datasets",
  "networkx",
  "numpy",
  "openai>=2.0.0",
  "pandas",
  "pillow",
  "scikit-learn",
  "sentence-transformers",
  "torch",
  "torchvision",
  "transformers",
]

[project.optional-dependencies]
kaggle = [
  "kaggle>=1.7.4.5",
]
pipeline-graph = [
  "skrub>=0.9,<0.10",
]
vertex = [
  "google-cloud-aiplatform",
]
dev = [
  "pytest>=8",
]

[tool.setuptools]
py-modules = [
  "cost_meter",
  "dataset_analyzer",
  "env_loader",
  "features_extraction_api",
  "pipeline",
  "vision_benchmark_catalog",
]

[tool.setuptools.packages.find]
namespaces = false
include = [
  "analyzer*",
  "experiments",
  "experiments.ab_loss_imbalance*",
  "features*",
  "ingestion*",
  "kb_mining*",
  "module4_agent*",
  "processors*",
  "recipe*",
  "recommender*",
  "retrieval*",
]
exclude = [
  "experiments.mlestar_kaggle_benchmarks*",
  "*.tests",
  "*.tests.*",
]
